--- a/style.css
+++ b/style.css
@@ -1,57 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
 
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: 'Cairo', sans-serif;
-    background-color: whitesmoke;
+  margin: 0;
+  font-family: Bebas Neue, sans-serif;
+  background: whitesmoke;
 }
 
 h1 {
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-    font-size: 50px;
-    letter-spacing: 5px;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  font-size: 40px;
+  letter-spacing: 5px;
 }
 
 /* Loader */
 .loader {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(255, 255, 255, 0.75);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .loader img {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);    
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Image Container */
-.img-container {
-    margin: 10px 30%;
+.image-container {
+  margin: 10px 30%;
 }
 
-.img-container img {
-    width: 100%;
-    margin-top: 5px;
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
 }
 
-/* Media Query: Large Smartphone */
+/* Media Query: Large Smartphone Vertical */
 @media screen and (max-width: 600px) {
-    h1 {
-        font-size: 14px;
-    }
+  h1 {
+    font-size: 20px;
+  }
 
-    .img-container {
-        margin: 10px;
-    }
+  .image-container {
+    margin: 10px;
+  }
 }
